made navbar fixed on mobile screens

--- a/src/components/research/ResearchComp.scss
+++ b/src/components/research/ResearchComp.scss
@@ -80,6 +80,7 @@
   .research-container {
     width: 100vw;
     padding: 0px;
+    margin-top: 75px;
   }
 
   .research-notes-title {
