--- a/src/components/resources/ResourcesComp.scss
+++ b/src/components/resources/ResourcesComp.scss
@@ -8,6 +8,7 @@
   @media (320px <= width <= 480px) {
     width: 100vw;
     align-items: start;
+    margin-top: 75px;
   }
 
   .main-title {
